About MeetTheTeam: fixed default table to SteeringCommitte, Student Collaborators alpha sorted and with scrollbar

--- a/src/Pages/AboutProject/About.css
+++ b/src/Pages/AboutProject/About.css
@@ -240,9 +240,11 @@ TABLE
 
 .aboutTable_entries { 
   width: 70%;
+  max-height: 20em;
   flex-direction: row;
   border: 1px solid var(--colorDarkBlue);
-  padding-top: 0.2em;;
+  padding-top: 0.2em;
+  overflow-y: scroll;
 }
 
 .aboutTable_entries > * {
